--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   json_annotation: ^4.9.0
   dio: ^5.5.0+1
   collection: ^1.18.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
