--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   dio: ^5.5.0+1
   collection: ^1.18.0
   intl: ^0.19.0
+  flutter_hooks: ^0.20.5
+  hooks_riverpod: ^2.5.2
 
 dev_dependencies:
   flutter_test:
