--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  shared_preferences: ^2.3.0
+  shared_preferences: ^2.3.2
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
   freezed_annotation: ^2.4.4
@@ -22,6 +22,7 @@ dependencies:
   intl: ^0.19.0
   flutter_hooks: ^0.20.5
   hooks_riverpod: ^2.5.2
+  flutter_native_splash: ^2.4.1
 
 dev_dependencies:
   flutter_test:
@@ -41,3 +42,7 @@ flutter:
   - family: NotoColorEmoji
     fonts:
       - asset: assets/fonts/NotoColorEmoji.ttf
+
+# https://pub.dev/packages/flutter_native_splash
+flutter_native_splash:
+  color: "#42a5f5"
