--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dev_dependencies:
   custom_lint: ^0.6.4
   riverpod_lint: ^2.3.10
   json_serializable: ^6.8.0
+  shared_preferences_tools: ^1.1.0
 
 flutter:
   uses-material-design: true
