--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_hooks: ^0.20.5
   hooks_riverpod: ^2.5.2
   flutter_native_splash: ^2.4.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
